--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "redis": "^4.7.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "winston": "^3.17.0"
   }
 }
