--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "rate-limiter-flexible": "^5.0.4",
     "redis": "^4.7.0",
     "validator": "^13.12.0",
     "winston": "^3.17.0"
