--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "mongoose": "^8.8.4",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "path": "^0.12.7",
     "rate-limiter-flexible": "^5.0.4",
     "redis": "^4.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0",
     "winston": "^3.17.0"
   }
