--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
